--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@heroicons/react": "^1.0.6",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "framer-motion": "^6.5.1",
     "next": "latest",
     "react": "18.1.0",
@@ -18,7 +20,8 @@
     "react-blockies": "^1.4.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.4.0",
-    "react-twitter-embed": "^4.0.4"
+    "react-twitter-embed": "^4.0.4",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
