--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -15,6 +15,16 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/aeternity.js", "pages/index.js", "components/Steps.jsx", "context/StakerContext.js", "pages/borrow.js", "pages/borrow.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/aeternity.js",
+    "pages/index.js",
+    "components/Steps.jsx",
+    "context/StakerContext.js",
+    "pages/borrow.js",
+    "pages/borrow.js"
+  ],
   "exclude": ["node_modules"]
 }
